# build-mcp-server

./: README.md
cli_project/: README.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml
weather/: main.py  weather.py
weather_mcp_server/: README.md  main.py  pyproject.toml
