[project]
name = "app"
version = "0.1.0"
description = "A CLI project that allows users to chat with a set of documents."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anthropic>=0.51.0",
    "mcp[cli]>=1.8.0",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
]
